# range-split

./: Cargo.toml  README.md
src/: bytes.rs  impl_macro.rs  lib.rs  mem.rs  str.rs  take_range.rs
tests/: assert_str_range.rs
